fix: add more z-index to drag-over tab classes

--- a/src/components/tabs/TabItem.css
+++ b/src/components/tabs/TabItem.css
@@ -97,6 +97,7 @@
   position: absolute;
   top: 0;
   bottom: 0;
+  z-index: 1;
   border-left: var(--border-dashed);
 }
 
